Update title bar transition

--- a/src/Base/AppTitleBar/AppTitleBar.xaml
+++ b/src/Base/AppTitleBar/AppTitleBar.xaml
@@ -73,6 +73,11 @@
                                 <!--  8: Min Drag Region  -->
                                 <ColumnDefinition Width="20" />
                             </Grid.ColumnDefinitions>
+
+                            <Grid.ChildrenTransitions>
+                                <RepositionThemeTransition IsStaggeringEnabled="False" />
+                            </Grid.ChildrenTransitions>
+
                             <Button
                                 x:Name="PART_BackButton"
                                 Grid.Column="0"
