--- a/src/Themes/Generic.xaml
+++ b/src/Themes/Generic.xaml
@@ -2,5 +2,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Richasy.WinUI.Share/Base/AppTitleBar/AppTitleBar.xaml" />
         <ResourceDictionary Source="ms-appx:///Richasy.WinUI.Share/Base/ImageExBase/ImageExBase.xaml" />
+        <ResourceDictionary Source="ms-appx:///Richasy.WinUI.Share/Base/SettingsControls/SettingsCard/SettingsCard.xaml" />
+        <ResourceDictionary Source="ms-appx:///Richasy.WinUI.Share/Base/SettingsControls/SettingsExpander/SettingsExpander.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
