Add IsTextSelectionEnabled in TrimTextBlock

--- a/src/Base/TrimTextBlock.xaml
+++ b/src/Base/TrimTextBlock.xaml
@@ -13,6 +13,7 @@
         x:Name="Block"
         FontFamily="{x:Bind FontFamily, Mode=OneWay}"
         FontSize="{x:Bind FontSize, Mode=OneWay}"
+        IsTextSelectionEnabled="{x:Bind IsTextSelectionEnabled, Mode=OneWay}"
         MaxLines="{x:Bind MaxLines, Mode=OneWay}"
         Text="{x:Bind Text, Mode=OneWay}"
         TextTrimming="CharacterEllipsis"
