--- a/src/Samples/AISample/TestPage.xaml
+++ b/src/Samples/AISample/TestPage.xaml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<Page
+<base:LayoutPageBase
     x:Class="AISample.TestPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ai="using:Richasy.WinUIKernel.AI"
+    xmlns:base="using:Richasy.WinUIKernel.Share.Base"
+    xmlns:chat="using:Richasy.WinUIKernel.AI.Chat"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:AISample"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,5 +18,6 @@
             Height="40"
             IsAvatar="True"
             Provider="Ernie" />
+        <StackPanel x:Name="ChatContainer" />
     </StackPanel>
-</Page>
+</base:LayoutPageBase>
