--- a/src/WinUIKernel.AI/ChatModelCard/ChatModelCard.xaml
+++ b/src/WinUIKernel.AI/ChatModelCard/ChatModelCard.xaml
@@ -6,6 +6,18 @@
     xmlns:ic="using:FluentIcons.WinUI"
     xmlns:local="using:Richasy.WinUIKernel.AI">
 
+    <Style
+        x:Key="SmallIconButtonStyle"
+        BasedOn="{StaticResource DefaultButtonStyle}"
+        TargetType="Button">
+        <Setter Property="Width" Value="32" />
+        <Setter Property="Height" Value="32" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+    </Style>
+
     <Style x:Key="DefaultChatModelCardStyle" TargetType="local:ChatModelCard">
         <Setter Property="Template">
             <Setter.Value>
