--- a/src/WinUIKernel.AI/CustomChatModelSection.xaml
+++ b/src/WinUIKernel.AI/CustomChatModelSection.xaml
@@ -3,6 +3,7 @@
     x:Class="Richasy.WinUIKernel.AI.CustomChatModelSection"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:Richasy.WinUIKernel.Share.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:ext="using:Richasy.WinUIKernel.AI.Extensions"
     xmlns:ic="using:FluentIcons.WinUI"
@@ -10,6 +11,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="using:Richasy.WinUIKernel.AI.ViewModels"
     mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityReverseConverter" IsReverse="True" />
+    </UserControl.Resources>
 
     <StackPanel Spacing="8">
         <Grid ColumnSpacing="8">
