--- a/src/WinUIKernel.AI/PredefinedChatModelSection.xaml
+++ b/src/WinUIKernel.AI/PredefinedChatModelSection.xaml
@@ -27,6 +27,7 @@
                                 x:Name="NameBlock"
                                 VerticalAlignment="Center"
                                 Style="{StaticResource BodyStrongTextBlockStyle}"
+                                Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=ViewModel.Name}"
                                 TextTrimming="CharacterEllipsis"
                                 TextWrapping="NoWrap" />
 
@@ -35,6 +36,7 @@
                                 Grid.Row="1"
                                 Foreground="{ThemeResource TextFillColorSecondaryBrush}"
                                 Style="{StaticResource BodyTextBlockStyle}"
+                                Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=ViewModel.Id}"
                                 TextTrimming="CharacterEllipsis"
                                 TextWrapping="NoWrap" />
                         </Grid>
