--- a/src/WinUIKernel.AI/Audio/AzureOpenAIAudioSettingControl.xaml
+++ b/src/WinUIKernel.AI/Audio/AzureOpenAIAudioSettingControl.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ai:ChatServiceConfigControlBase
-    x:Class="Richasy.WinUIKernel.AI.Chat.AzureOpenAIChatSettingControl"
+<ai:AudioServiceConfigControlBase
+    x:Class="Richasy.WinUIKernel.AI.Audio.AzureOpenAIAudioSettingControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ai="using:Richasy.WinUIKernel.AI"
@@ -8,7 +8,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:ext="using:Richasy.WinUIKernel.AI.Extensions"
     xmlns:ic="using:FluentIcons.WinUI"
-    xmlns:local="using:Richasy.WinUIKernel.AI.Chat"
+    xmlns:local="using:Richasy.WinUIKernel.AI.Audio"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
@@ -53,16 +53,16 @@
                     PlaceholderText="https://example.openai.azure.com"
                     TextChanged="OnEndpointBoxTextChanged" />
             </base:SettingsCard>
+            <base:SettingsCard x:Name="PredefinedCard" Header="{ext:Locale Name=PredefinedModels}">
+                <HyperlinkButton Click="OnPredefinedModelsButtonClick" Content="{ext:Locale Name=SeeAllPredefinedModels}">
+                    <FlyoutBase.AttachedFlyout>
+                        <Flyout Placement="Bottom" ShouldConstrainToRootBounds="False">
+                            <ai:PredefinedAudioModelSection ViewModel="{x:Bind ViewModel}" />
+                        </Flyout>
+                    </FlyoutBase.AttachedFlyout>
+                </HyperlinkButton>
+            </base:SettingsCard>
         </base:SettingsExpander.Items>
-        <base:SettingsExpander.ItemsFooter>
-            <Grid
-                Padding="58,8,44,12"
-                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                BorderThickness="0,1,0,0">
-                <ai:CustomChatModelSection ViewModel="{x:Bind ViewModel}" />
-            </Grid>
-        </base:SettingsExpander.ItemsFooter>
         <ic:SymbolIcon
             FontSize="14"
             Foreground="{ThemeResource SystemFillColorSuccessBrush}"
@@ -70,4 +70,4 @@
             Symbol="CheckmarkCircle"
             Visibility="{x:Bind ViewModel.IsCompleted, Mode=OneWay}" />
     </base:SettingsExpander>
-</ai:ChatServiceConfigControlBase>
+</ai:AudioServiceConfigControlBase>
