--- a/src/WinUIKernel.AI/Audio/OpenAIAudioSettingControl.xaml
+++ b/src/WinUIKernel.AI/Audio/OpenAIAudioSettingControl.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ai:ChatServiceConfigControlBase
-    x:Class="Richasy.WinUIKernel.AI.Chat.AzureOpenAIChatSettingControl"
+<ai:AudioServiceConfigControlBase
+    x:Class="Richasy.WinUIKernel.AI.Audio.OpenAIAudioSettingControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ai="using:Richasy.WinUIKernel.AI"
@@ -8,33 +8,16 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:ext="using:Richasy.WinUIKernel.AI.Extensions"
     xmlns:ic="using:FluentIcons.WinUI"
-    xmlns:local="using:Richasy.WinUIKernel.AI.Chat"
+    xmlns:local="using:Richasy.WinUIKernel.AI.Audio"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <base:SettingsExpander>
         <base:SettingsExpander.Header>
-            <StackPanel Orientation="Horizontal" Spacing="12">
-                <ai:AILogo
-                    x:Name="Logo"
-                    Height="17"
-                    VerticalAlignment="Center" />
-                <Border
-                    Width="2"
-                    Height="20"
-                    VerticalAlignment="Center"
-                    Background="{ThemeResource DividerStrokeColorDefaultBrush}" />
-                <ai:AILogo
-                    Height="20"
-                    VerticalAlignment="Center"
-                    Provider="OpenAI" />
-            </StackPanel>
+            <ai:AILogo x:Name="Logo" Height="22" />
         </base:SettingsExpander.Header>
         <base:SettingsExpander.Items>
-            <base:SettingsCard
-                x:Name="KeyCard"
-                Description="{ext:Locale Name=AzureOpenAIAccessKeyDescription}"
-                Header="{ext:Locale Name=AccessKey}">
+            <base:SettingsCard x:Name="KeyCard" Header="{ext:Locale Name=AccessKey}">
                 <PasswordBox
                     x:Name="KeyBox"
                     Width="200"
@@ -44,25 +27,36 @@
             </base:SettingsCard>
             <base:SettingsCard
                 x:Name="EndpointCard"
-                Description="{ext:Locale Name=AzureOpenAIEndpointDescription}"
+                Description="{ext:Locale Name=EndpointDescription}"
                 Header="{ext:Locale Name=Endpoint}">
                 <TextBox
                     x:Name="EndpointBox"
                     Width="200"
                     AutomationProperties.Name="{ext:Locale Name=Endpoint}"
-                    PlaceholderText="https://example.openai.azure.com"
+                    PlaceholderText="{ext:Locale Name=EndpointPlaceholder}"
                     TextChanged="OnEndpointBoxTextChanged" />
             </base:SettingsCard>
+            <base:SettingsCard
+                x:Name="OrganizationCard"
+                Description="{ext:Locale Name=OptionalPlaceholder}"
+                Header="{ext:Locale Name=OrganizationOptional}">
+                <TextBox
+                    x:Name="OrganizationBox"
+                    Width="200"
+                    AutomationProperties.Name="{ext:Locale Name=OrganizationOptional}"
+                    PlaceholderText="{ext:Locale Name=OptionalPlaceholder}"
+                    TextChanged="OnOrganizationBoxTextChanged" />
+            </base:SettingsCard>
+            <base:SettingsCard x:Name="PredefinedCard" Header="{ext:Locale Name=PredefinedModels}">
+                <HyperlinkButton Click="OnPredefinedModelsButtonClick" Content="{ext:Locale Name=SeeAllPredefinedModels}">
+                    <FlyoutBase.AttachedFlyout>
+                        <Flyout Placement="Bottom" ShouldConstrainToRootBounds="False">
+                            <ai:PredefinedAudioModelSection ViewModel="{x:Bind ViewModel}" />
+                        </Flyout>
+                    </FlyoutBase.AttachedFlyout>
+                </HyperlinkButton>
+            </base:SettingsCard>
         </base:SettingsExpander.Items>
-        <base:SettingsExpander.ItemsFooter>
-            <Grid
-                Padding="58,8,44,12"
-                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                BorderThickness="0,1,0,0">
-                <ai:CustomChatModelSection ViewModel="{x:Bind ViewModel}" />
-            </Grid>
-        </base:SettingsExpander.ItemsFooter>
         <ic:SymbolIcon
             FontSize="14"
             Foreground="{ThemeResource SystemFillColorSuccessBrush}"
@@ -70,4 +64,4 @@
             Symbol="CheckmarkCircle"
             Visibility="{x:Bind ViewModel.IsCompleted, Mode=OneWay}" />
     </base:SettingsExpander>
-</ai:ChatServiceConfigControlBase>
+</ai:AudioServiceConfigControlBase>
