--- a/src/WinUIKernel.AI/Themes/Generic.xaml
+++ b/src/WinUIKernel.AI/Themes/Generic.xaml
@@ -7,5 +7,6 @@
         <ResourceDictionary Source="ms-appx:///Richasy.WinUIKernel.AI/AILogo/AILogo.xaml" />
         <ResourceDictionary Source="ms-appx:///Richasy.WinUIKernel.AI/ChatModelCard/ChatModelCard.xaml" />
         <ResourceDictionary Source="ms-appx:///Richasy.WinUIKernel.AI/AudioModelCard/AudioModelCard.xaml" />
+        <ResourceDictionary Source="ms-appx:///Richasy.WinUIKernel.AI/DrawModelCard/DrawModelCard.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
