--- a/src/Samples/AISample/TestPage.xaml
+++ b/src/Samples/AISample/TestPage.xaml
@@ -26,6 +26,12 @@
                     <RepositionThemeTransition IsStaggeringEnabled="False" />
                 </StackPanel.ChildrenTransitions>
             </StackPanel>
+
+            <StackPanel x:Name="DrawContainer">
+                <StackPanel.ChildrenTransitions>
+                    <RepositionThemeTransition IsStaggeringEnabled="False" />
+                </StackPanel.ChildrenTransitions>
+            </StackPanel>
         </StackPanel>
     </ScrollViewer>
 </base:LayoutPageBase>
